--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@ apply plugin: 'signing'
 apply plugin: 'eclipse'
 apply plugin: 'com.jfrog.bintray'
 
-sourceCompatibility = '1.5'
-targetCompatibility = '1.5'
+sourceCompatibility = '1.6'
+targetCompatibility = '1.6'
 
 // Release version that won't conflict with the bintray plugin
-def releaseVersion = "2.2.7-INFINIT"
+def releaseVersion = "2.2.7"
 // variables that configure the Maven upload
 group = "net.saliman"
 archivesBaseName = "gradle-cobertura-plugin"
@@ -50,10 +50,10 @@ repositories {
 dependencies {
 	compile localGroovy()
 	compile gradleApi()
-	testCompile 'junit:junit:4.10'
-	testRuntime 'net.sourceforge.cobertura:cobertura:2.1.0-SNAPSHOT'
-	archives "org.apache.maven.wagon:wagon-ssh:2.2"
-	archives "org.apache.maven.wagon:wagon-ssh-external:2.2"
+	testCompile 'junit:junit:4.12'
+	testRuntime 'net.sourceforge.cobertura:cobertura:2.1.1'
+	archives "org.apache.maven.wagon:wagon-ssh:2.8"
+	archives "org.apache.maven.wagon:wagon-ssh-external:2.8"
 }
 
 project.tasks.test.configure {
