--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 cobertura {
-  // coberturaVersion = '2.1.0-SNAPSHOT'
+  // coberturaVersion = '2.1.1'
   coverageFormats = [ 'xml', 'html' ]
   coverageExcludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
   // coverageIncludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
