--- a/testclient/build.gradle
+++ b/testclient/build.gradle
@@ -12,6 +12,12 @@ repositories {
 
 subprojects {
   apply plugin: 'java'
+	dependencies {
+		// Cobertura declares a dependency on the slf4j API, so we need to supply
+		// a runtime implementation to avoid NoClassDefFoundErrors
+		testRuntime "org.slf4j:slf4j-log4j12:1.7.5"
+		testRuntime "log4j:log4j:1.2.17"
+	}
 }
 
 apply plugin: 'net.saliman.cobertura'
