--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,14 @@ buildscript {
 	repositories {
 		jcenter()
 		mavenCentral()
+		maven {
+		  url 'https://plugins.gradle.org/m2/'
+		}
 	}
 	dependencies {
 		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
 		classpath 'org.codehaus.groovy:groovy-all:2.4.1'
+		classpath 'com.gradle.publish:plugin-publish-plugin:0.9.1'
 	}
 }
 apply plugin: 'java'
@@ -17,6 +21,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'eclipse'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.gradle.plugin-publish'
 
 sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
@@ -207,6 +212,21 @@ bintray {
 			]
 		}
 	}
+}
+
+// configuration for publishing to the Gradle plugins portal
+pluginBundle {
+  website = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
+  vcsUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin.git'
+  description = 'A Gradle plugin for working with the Cobertura coverage tool.'
+  tags = [ 'gradle', 'cobertura', 'coverage' ]
+
+  plugins {
+    gradleLiquibasePlugin {
+      id = 'net.saliman.cobertura'
+      displayName = 'Gradle Cobertura plugin'
+    }
+  }
 }
 
 // The testclient links to this file in its buildSrc directory.  Gradle always
