--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -1,9 +1,10 @@
 #!groovy
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'scala'
 apply plugin: 'net.saliman.cobertura'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
+//apply plugin: 'eclipse'
+//apply plugin: 'idea'
 apply plugin: 'maven'
 
 repositories {
