--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -13,18 +13,20 @@ repositories {
 }
 
 dependencies {
+	compile 'org.projectlombok:lombok:1.16.20'
 	compile 'org.codehaus.groovy:groovy-all:2.4.1'
 	testCompile "junit:junit:4.10"
 	testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
 }
 
 cobertura {
-  // coberturaVersion = '2.0.3'
+  // coberturaVersion = '2.1.2-SNAPSHOT'
   coverageFormats = [ 'xml', 'html' ]
   coverageExcludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
   // coverageIncludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
   coverageIgnoreTrivial = true;
-  coverageIgnoreMethodAnnotations = [ 'net.saliman.gradle.plugin.cobertura.testclient.calculator.CoverageIgnore' ]
+  // coverageIgnoreMethodAnnotations = [ 'net.saliman.gradle.plugin.cobertura.testclient.calculator.CoverageIgnore' ]
+  coverageIgnoreMethodAnnotations = [ 'lombok.EqualsAndHashCode' ]
 	// coverageTestTasks {
 	   // project.tasks.withType(Test).matching {
 			 // it.name.contains("verify")
