--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
+		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
 		classpath 'org.codehaus.groovy:groovy-all:2.4.1'
 		classpath 'com.gradle.publish:plugin-publish-plugin:0.9.1'
 	}
 }
 apply plugin: 'java'
 apply plugin: 'groovy'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'eclipse'
 apply plugin: 'com.jfrog.bintray'
@@ -27,7 +27,7 @@ sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
 
 // Release version that won't conflict with the bintray plugin
-def releaseVersion = "2.5.4"
+def releaseVersion = "2.6.0-SNAPSHOT"
 // variables that configure the Maven upload
 group = "net.saliman"
 archivesBaseName = "gradle-cobertura-plugin"
@@ -75,13 +75,9 @@ task groovydocJar(type: Jar) {
 	from groovydoc
 }
 
-artifacts {
-	archives jar, groovydocJar, sourceJar
-}
-
-signing {
-	sign configurations.archives
-}
+//artifacts {
+//	archives jar, groovydocJar, sourceJar
+//}
 
 // Only *require* signing if we are uploading a non snapshot version.  If we
 // do need to sign, make sure we've got the properties we need to do the
@@ -118,79 +114,117 @@ gradle.taskGraph.whenReady { taskGraph ->
 	}
 }
 
-uploadArchives {
-	// We can't use taskGraph.whenReady because it doesn't resolve until after
-	// configuration.  The startParameter is not as good, but it probably
-	// good enough for our purposes.
-	if ( gradle.startParameter.taskNames.contains("uploadArchives") ) {
-		// Use Java 6's console to read from the console (no good for a CI
-		// environment)
-		Console console = System.console()
-		console.printf "\n\nWe have to upload some things in this build...\n\n"
-
-		if ( !project.hasProperty('mavenCentralUsername') ) {
-			def mavenCentralUsername = console.readLine("Maven Central Username: ")
-			allprojects { ext."mavenCentralUsername" = mavenCentralUsername }
-		}
-
-		if ( !project.hasProperty('mavenCentralPassword') ) {
-			def mavenCentralPassword = console.readLine("Maven Central Password: ")
-			allprojects { ext."mavenCentralPassword" = mavenCentralPassword }
-		}
-
-		repositories {
-			mavenDeployer {
-				if ( signing.signatory ) {
-					beforeDeployment { signing.signPom(it) }
+publishing {
+	publications {
+		coberturaPlugin(MavenPublication) {
+			from components.java
+			artifact groovydocJar
+			artifact(sourceJar) { classifier = 'bob' }
+			pom {
+				name = 'Gradle Cobertura Plugin'
+				description = 'A Gradle plugin for runing Cobertura coverage reports.'
+				url = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
+				packaging = 'jar'
+				licenses {
+					license {
+						name = 'The Apache Software License, Version 2.0'
+						url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+					}
 				}
-				configuration = configurations.archives
-				//repository(url: "file://$buildDir/m2repo")
-				repository(url: mavenCentralUploadUrl) {
-					authentication(userName: mavenCentralUsername,
-									password: mavenCentralPassword)
-					releases(updatePolicy: "always")
-					snapshots(updatePolicy: "always")
+				developers {
+					developer {
+						id = 'stevesaliman'
+						name = 'Steven C. Saliman'
+						email = 'support@saliman.net'
+					}
 				}
-				pom.project(pomConfiguration)
+				scm {
+					connection = 'scm:https://stevesaliman@github.com/stevesaliman/gradle-cobertura-plugin'
+					developerConnection = 'scm:git@github.com:stevesaliman/gradle-cobertura-plugin.git'
+					url = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
+				}
+			}
+
+		}
+	}
+
+	repositories {
+		maven {
+			url = mavenCentralUploadUrl
+			// We only need to mess with credentials if we're publishing...
+			if ( gradle.startParameter.taskNames.contains("publish") ) {
+				// Use Java 6's console to read from the console (no good for a CI
+				// environment)
+				Console console = System.console()
+				console.printf "\n\nWe have to upload some things in this build...\n\n"
+
+				if ( !project.hasProperty('mavenCentralUsername') ) {
+					def mavenCentralUsername = console.readLine("Maven Central Username: ")
+					allprojects { ext."mavenCentralUsername" = mavenCentralUsername }
+				}
+
+				if ( !project.hasProperty('mavenCentralPassword') ) {
+					def mavenCentralPassword = console.readLine("Maven Central Password: ")
+					allprojects { ext."mavenCentralPassword" = mavenCentralPassword }
+				}
+				credentials {
+					username mavenCentralUsername
+					password mavenCentralPassword
+				}
 			}
 		}
 	}
 }
 
-
-def getPomConfiguration() {
-	return {
-		name 'Gradle Cobertura Plugin'
-		packaging 'jar'
-		description 'A Gradle plugin for runing Cobertura coverage reports.'
-		url 'https://github.com/stevesaliman/gradle-cobertura-plugin'
-		licenses {
-			license {
-				name 'The Apache Software License, Version 2.0'
-				url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-				distribution 'repo'
-			}
-		}
-		developers {
-			developer {
-				id 'stevesaliman'
-				name 'Steven C. Saliman'
-				email 'support@saliman.net'
-			}
-		}
-		scm {
-			connection 'scm:https://stevesaliman@github.com/stevesaliman/gradle-cobertura-plugin'
-			developerConnection 'scm:git@github.com:stevesaliman/gradle-cobertura-plugin.git'
-			url 'https://github.com/stevesaliman/gradle-cobertura-plugin'
-		}
-	}
+signing {
+	sign publishing.publications.coberturaPlugin
 }
+
+//uploadArchives {
+//	// We can't use taskGraph.whenReady because it doesn't resolve until after
+//	// configuration.  The startParameter is not as good, but it probably
+//	// good enough for our purposes.
+//	if ( gradle.startParameter.taskNames.contains("uploadArchives") ) {
+//		// Use Java 6's console to read from the console (no good for a CI
+//		// environment)
+//		Console console = System.console()
+//		console.printf "\n\nWe have to upload some things in this build...\n\n"
+//
+//		if ( !project.hasProperty('mavenCentralUsername') ) {
+//			def mavenCentralUsername = console.readLine("Maven Central Username: ")
+//			allprojects { ext."mavenCentralUsername" = mavenCentralUsername }
+//		}
+//
+//		if ( !project.hasProperty('mavenCentralPassword') ) {
+//			def mavenCentralPassword = console.readLine("Maven Central Password: ")
+//			allprojects { ext."mavenCentralPassword" = mavenCentralPassword }
+//		}
+//
+//		repositories {
+//			mavenDeployer {
+//				if ( signing.signatory ) {
+//					beforeDeployment { signing.signPom(it) }
+//				}
+//				configuration = configurations.archives
+//				//repository(url: "file://$buildDir/m2repo")
+//				repository(url: mavenCentralUploadUrl) {
+//					authentication(userName: mavenCentralUsername,
+//									password: mavenCentralPassword)
+//					releases(updatePolicy: "always")
+//					snapshots(updatePolicy: "always")
+//				}
+//				pom.project(pomConfiguration)
+//			}
+//		}
+//	}
+//}
 
 bintray {
 	user = project.hasProperty('bintrayUsername') ? project.getProperty('bintrayUsername') : ''
 	key = project.hasProperty('bintrayApiKey') ? project.getProperty('bintrayApiKey') : ''
 
-	configurations = [ 'archives' ]
+	publications = [ 'coberturaPlugin' ]
+	publish = true
 
 	pkg {
 		// repo = 'gradle-plugins'
