--- a/build.gradle
+++ b/build.gradle
@@ -10,18 +10,20 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
 		classpath 'org.codehaus.groovy:groovy-all:2.4.1'
-		classpath 'com.gradle.publish:plugin-publish-plugin:0.9.1'
+		classpath 'com.gradle.publish:plugin-publish-plugin:0.10.0'
 	}
 }
-apply plugin: 'java'
+
+apply plugin: 'com.gradle.plugin-publish'
+apply plugin: 'java-gradle-plugin'
+//apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'eclipse'
 apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.gradle.plugin-publish'
 
 sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
@@ -42,10 +44,6 @@ if ( isSnapshot ) {
 	ext.mavenCentralUploadUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 }
 
-configurations {
-	archives
-}
-
 repositories {
 	mavenCentral()
 	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
@@ -57,11 +55,11 @@ dependencies {
 	compile gradleApi()
 	testCompile 'junit:junit:4.12'
 	testRuntime 'net.sourceforge.cobertura:cobertura:2.1.1'
-	archives "org.apache.maven.wagon:wagon-ssh:2.8"
-	archives "org.apache.maven.wagon:wagon-ssh-external:2.8"
+//	archives "org.apache.maven.wagon:wagon-ssh:2.8"
+//	archives "org.apache.maven.wagon:wagon-ssh-external:2.8"
 }
 
-project.tasks.uploadArchives.dependsOn 'test'
+project.tasks.publish.dependsOn 'test'
 
 task sourceJar(type: Jar) {
 	description = "An archive of the source code for Maven Central"
@@ -75,51 +73,41 @@ task groovydocJar(type: Jar) {
 	from groovydoc
 }
 
-//artifacts {
-//	archives jar, groovydocJar, sourceJar
-//}
-
-// Only *require* signing if we are uploading a non snapshot version.  If we
-// do need to sign, make sure we've got the properties we need to do the
-// signing.
-gradle.taskGraph.whenReady { taskGraph ->
-	tasks.withType(org.gradle.plugins.signing.Sign).all {
-		required = taskGraph.hasTask(":uploadArchives") && !isSnapshot
-		if ( required ) {
-			// Use Java 6's console to read from the console (no good for a CI
-			// environment)
-			Console console = System.console()
-			console.printf "\n\nWe have to sign some things in this build...\n\n"
-
-			if ( !project.hasProperty('signing.keyId') ) {
-				def id = console.readLine("PGP Public Key Id: ")
-				allprojects { ext."signing.keyId" = id }
-			}
-
-			if ( !project.hasProperty('signing.secretKeyRingFile') ) {
-				def file = console.readLine("PGP Secret Key Ring File (absolute path): ")
-				allprojects { ext."signing.secretKeyRingFile" = file }
-			}
-
-			if ( !project.hasProperty('signing.password') ) {
-				def password = console.readPassword("PGP Private Key Password: ")
-				allprojects { ext."signing.password" = password }
-			}
-
-			//def x = ext."signing.keyId"
-			//println "using key ${x}"
-
-			console.printf "\nThanks.\n\n"
+// Configure the java-gradle-plugin.  Note that the ID must match it's Gradle
+// Plugin Portal id.  This will screw up Maven publishing, but we'll fix that
+// later.
+gradlePlugin {
+	plugins {
+		coberturaPlugin {
+			id = 'net.saliman.cobertura'
+			displayName = 'Gradle Cobertura plugin'
+			description = 'A Gradle plugin for working with the Cobertura coverage tool.'
+			implementationClass = 'net.saliman.gradle.plugin.cobertura.CoberturaPlugin'
 		}
 	}
 }
 
+// configuration for publishing to the Gradle plugins portal
+pluginBundle {
+	website = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
+	vcsUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin.git'
+	description = 'A Gradle plugin for working with the Cobertura coverage tool.'
+	tags = ['gradle', 'cobertura', 'coverage']
+//	plugins {
+//		coberturaPlugin {
+//			displayName = 'Gradle Cobertura plugin'
+//			description = 'A Gradle plugin for working with the Cobertura coverage tool.'
+//		}
+//	}
+}
+
+// Configure the maven-publish plugin
 publishing {
 	publications {
 		coberturaPlugin(MavenPublication) {
 			from components.java
 			artifact groovydocJar
-			artifact(sourceJar) { classifier = 'bob' }
+			artifact sourceJar
 			pom {
 				name = 'Gradle Cobertura Plugin'
 				description = 'A Gradle plugin for runing Cobertura coverage reports.'
@@ -153,9 +141,9 @@ publishing {
 			url = mavenCentralUploadUrl
 			// We only need to mess with credentials if we're publishing...
 			if ( gradle.startParameter.taskNames.contains("publish") ) {
-				// Use Java 6's console to read from the console (no good for a CI
+				// Use Java's console to read from the console (no good for a CI
 				// environment)
-				Console console = System.console()
+				def console = System.console()
 				console.printf "\n\nWe have to upload some things in this build...\n\n"
 
 				if ( !project.hasProperty('mavenCentralUsername') ) {
@@ -180,45 +168,7 @@ signing {
 	sign publishing.publications.coberturaPlugin
 }
 
-//uploadArchives {
-//	// We can't use taskGraph.whenReady because it doesn't resolve until after
-//	// configuration.  The startParameter is not as good, but it probably
-//	// good enough for our purposes.
-//	if ( gradle.startParameter.taskNames.contains("uploadArchives") ) {
-//		// Use Java 6's console to read from the console (no good for a CI
-//		// environment)
-//		Console console = System.console()
-//		console.printf "\n\nWe have to upload some things in this build...\n\n"
-//
-//		if ( !project.hasProperty('mavenCentralUsername') ) {
-//			def mavenCentralUsername = console.readLine("Maven Central Username: ")
-//			allprojects { ext."mavenCentralUsername" = mavenCentralUsername }
-//		}
-//
-//		if ( !project.hasProperty('mavenCentralPassword') ) {
-//			def mavenCentralPassword = console.readLine("Maven Central Password: ")
-//			allprojects { ext."mavenCentralPassword" = mavenCentralPassword }
-//		}
-//
-//		repositories {
-//			mavenDeployer {
-//				if ( signing.signatory ) {
-//					beforeDeployment { signing.signPom(it) }
-//				}
-//				configuration = configurations.archives
-//				//repository(url: "file://$buildDir/m2repo")
-//				repository(url: mavenCentralUploadUrl) {
-//					authentication(userName: mavenCentralUsername,
-//									password: mavenCentralPassword)
-//					releases(updatePolicy: "always")
-//					snapshots(updatePolicy: "always")
-//				}
-//				pom.project(pomConfiguration)
-//			}
-//		}
-//	}
-//}
-
+// Configure BinTray publishing
 bintray {
 	user = project.hasProperty('bintrayUsername') ? project.getProperty('bintrayUsername') : ''
 	key = project.hasProperty('bintrayApiKey') ? project.getProperty('bintrayApiKey') : ''
@@ -242,25 +192,51 @@ bintray {
 			// vcsTag = version
 			vcsTag = "Release_${releaseVersion}"
 			attributes = [
-							'gradle-plugin': 'net.saliman.cobertura:net.saliman:gradle-cobertura-plugin'
+					'gradle-plugin': 'net.saliman.cobertura:net.saliman:gradle-cobertura-plugin'
 			]
 		}
 	}
 }
 
-// configuration for publishing to the Gradle plugins portal
-pluginBundle {
-  website = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
-  vcsUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin.git'
-  description = 'A Gradle plugin for working with the Cobertura coverage tool.'
-  tags = [ 'gradle', 'cobertura', 'coverage' ]
+// When we're ready to go, there are a couple of things we'll need to do before
+// we execute anything.
+gradle.taskGraph.whenReady { taskGraph ->
+	// This is a rather nasty little hack.  When we apply java-gradle-plugin,
+	// It creates some maven-publish tasks that conflict with the manual 
+	// configuration - it tries to publish a net.saliman.cobertura artifact,
+	// which is wrong.  The quick and very dirty solution is to disable those
+	// tasks.
+	taskGraph.allTasks.findAll { it.name ==~ /.*MavenPublication.*/ }*.enabled = false
 
-  plugins {
-    gradleLiquibasePlugin {
-      id = 'net.saliman.cobertura'
-      displayName = 'Gradle Cobertura plugin'
-    }
-  }
+	// Only *require* signing if we are uploading a non snapshot version.  If we
+	// do need to sign, make sure we've got the properties we need to do the
+	// signing.
+	tasks.withType(org.gradle.plugins.signing.Sign).all {
+		required = taskGraph.hasTask(":publish") && !isSnapshot
+		if ( required ) {
+			// Use Java's console to read from the console (no good for a CI
+			// environment)
+			def console = System.console()
+			console.printf "\n\nWe have to sign some things in this build...\n\n"
+
+			if ( !project.hasProperty('signing.keyId') ) {
+				def id = console.readLine("PGP Public Key Id: ")
+				allprojects { ext."signing.keyId" = id }
+			}
+
+			if ( !project.hasProperty('signing.secretKeyRingFile') ) {
+				def file = console.readLine("PGP Secret Key Ring File (absolute path): ")
+				allprojects { ext."signing.secretKeyRingFile" = file }
+			}
+
+			if ( !project.hasProperty('signing.password') ) {
+				def password = console.readPassword("PGP Private Key Password: ")
+				allprojects { ext."signing.password" = password }
+			}
+
+			console.printf "\nThanks.\n\n"
+		}
+	}
 }
 
 // The testclient links to this file in its buildSrc directory.  Gradle always
@@ -271,3 +247,7 @@ if ( projectDir.name.endsWith('buildSrc') ) {
   println "Disabling plugin tests when building from the 'buildSrc' directory"
 	test.enabled = false
 }
+
+//task release() {
+//	dependsOn 'assemble', 'publish', 'bintrayUpload', 'publishPlugins'
+//}
