--- a/testclient/logger/build.gradle
+++ b/testclient/logger/build.gradle
@@ -11,12 +11,7 @@ repositories {
 }
 
 dependencies {
-	testCompile "junit:junit:4.10"
-}
-
-
-task wrapper(type: Wrapper) {
-	gradleVersion = '1.6'
+	testImplementation "junit:junit:4.10"
 }
 
 test {
