--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'scala'
 apply plugin: 'net.saliman.cobertura'
-//apply plugin: 'eclipse'
-//apply plugin: 'idea'
 apply plugin: 'maven'
 
 repositories {
@@ -13,10 +11,10 @@ repositories {
 }
 
 dependencies {
-	compile 'org.projectlombok:lombok:1.16.20'
-	compile 'org.codehaus.groovy:groovy-all:2.4.1'
-	testCompile "junit:junit:4.10"
-	testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
+	implementation 'org.projectlombok:lombok:1.16.20'
+	implementation 'org.codehaus.groovy:groovy-all:2.4.1'
+	testImplementation "junit:junit:4.10"
+	testImplementation "org.spockframework:spock-core:0.7-groovy-2.0"
 }
 
 cobertura {
