--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 // Release version that won't conflict with the bintray plugin
-def releaseVersion = "3.0.0-SNAPSHOT"
+def releaseVersion = "3.0.0"
 // variables that configure the Maven upload
 group = "net.saliman"
 archivesBaseName = "gradle-cobertura-plugin"
