--- a/build.gradle
+++ b/build.gradle
@@ -20,32 +20,33 @@ apply plugin: 'java-gradle-plugin'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'com.jfrog.bintray'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 // Release version that won't conflict with the bintray plugin
-def releaseVersion = "3.0.0"
+def releaseVersion = "3.0.1-SNAPSHOT"
 // variables that configure the Maven upload
 group = "net.saliman"
 archivesBaseName = "gradle-cobertura-plugin"
 version = releaseVersion
-ext.isSnapshot = releaseVersion.endsWith("SNAPSHOT")
+ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
-if ( isSnapshot ) {
-	println "Using snapshot repository for artifact uploads"
-	ext.mavenCentralUploadUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-} else {
+if ( isReleaseVersion ) {
 	println "Using staging repository for artifact uploads"
 	ext.mavenCentralUploadUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+} else {
+	println "Using snapshot repository for artifact uploads"
+	ext.mavenCentralUploadUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
 }
 
 repositories {
+	mavenLocal()
+	jcenter()
 	mavenCentral()
 	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-	mavenLocal()
 }
 
 dependencies {
@@ -161,10 +162,6 @@ publishing {
 	}
 }
 
-signing {
-	sign publishing.publications.coberturaPlugin
-}
-
 // Configure BinTray publishing
 bintray {
 	user = project.hasProperty('bintrayUsername') ? project.getProperty('bintrayUsername') : ''
@@ -195,6 +192,10 @@ bintray {
 	}
 }
 
+signing {
+	sign publishing.publications.coberturaPlugin
+}
+
 // When we're ready to go, there are a couple of things we'll need to do before
 // we execute anything.
 gradle.taskGraph.whenReady { taskGraph ->
@@ -203,35 +204,36 @@ gradle.taskGraph.whenReady { taskGraph ->
 	// configuration - it tries to publish a net.saliman.cobertura artifact,
 	// which is wrong.  The quick and very dirty solution is to disable those
 	// tasks.
-	taskGraph.allTasks.findAll { it.name ==~ /.*MavenPublication.*/ }*.enabled = false
+	// Comment this to publish to Gradle and Bintray, Uncomment for Maven Central
+	// taskGraph.allTasks.findAll { it.name ==~ /.*MavenPublication.*/ }*.enabled = false
 
-	// Only *require* signing if we are uploading a non snapshot version.  If we
-	// do need to sign, make sure we've got the properties we need to do the
-	// signing.
-	tasks.withType(org.gradle.plugins.signing.Sign).all {
-		required = taskGraph.hasTask(":publish") && !isSnapshot
-		if ( required ) {
-			// Use Java's console to read from the console (no good for a CI
-			// environment)
-			def console = System.console()
-			console.printf "\n\nWe have to sign some things in this build...\n\n"
+	// Only *require* signing if we are uploading a release version.  If we do
+	// need to sign, make sure we've got the properties we need to do the signing.
+	if ( isReleaseVersion && taskGraph.hasTask(":publish") ) {
+		// Use Java's console to read from the console (no good for a CI
+		// environment)
+		def console = System.console()
+		console.printf "\n\nWe have to sign some things in this build...\n\n"
 
-			if ( !project.hasProperty('signing.keyId') ) {
-				def id = console.readLine("PGP Public Key Id: ")
-				allprojects { ext."signing.keyId" = id }
-			}
+		if ( !project.hasProperty('signing.keyId') ) {
+			def id = console.readLine("PGP Public Key Id: ")
+			allprojects { ext."signing.keyId" = id }
+		}
 
-			if ( !project.hasProperty('signing.secretKeyRingFile') ) {
-				def file = console.readLine("PGP Secret Key Ring File (absolute path): ")
-				allprojects { ext."signing.secretKeyRingFile" = file }
-			}
+		if ( !project.hasProperty('signing.secretKeyRingFile') ) {
+			def file = console.readLine("PGP Secret Key Ring File (absolute path): ")
+			allprojects { ext."signing.secretKeyRingFile" = file }
+		}
 
-			if ( !project.hasProperty('signing.password') ) {
-				def password = console.readPassword("PGP Private Key Password: ")
-				allprojects { ext."signing.password" = password }
-			}
+		if ( !project.hasProperty('signing.password') ) {
+			def password = console.readPassword("PGP Private Key Password: ")
+			allprojects { ext."signing.password" = password }
+		}
 
-			console.printf "\nThanks.\n\n"
+		console.printf "\nThanks.\n\n"
+	} else {
+	  tasks.withType(org.gradle.plugins.signing.Sign).all {
+		  it.enabled = false
 		}
 	}
 }
