Updated the gradle plugin to publish plugins

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 	}
 	dependencies {
 		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-		classpath 'com.gradle.publish:plugin-publish-plugin:0.10.0'
+		classpath 'com.gradle.publish:plugin-publish-plugin:0.12.0'
 	}
 }
 
@@ -205,7 +205,7 @@ gradle.taskGraph.whenReady { taskGraph ->
 	// which is wrong.  The quick and very dirty solution is to disable those
 	// tasks.
 	// Comment this to publish to Gradle and Bintray, Uncomment for Maven Central
-	// taskGraph.allTasks.findAll { it.name ==~ /.*MavenPublication.*/ }*.enabled = false
+	 taskGraph.allTasks.findAll { it.name ==~ /.*MavenPublication.*/ }*.enabled = false
 
 	// Only *require* signing if we are uploading a release version.  If we do
 	// need to sign, make sure we've got the properties we need to do the signing.
