--- a/testclient/logger/build.gradle
+++ b/testclient/logger/build.gradle
@@ -3,7 +3,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 repositories {
 	mavenCentral()
