--- a/testclient/util/build.gradle
+++ b/testclient/util/build.gradle
@@ -8,8 +8,8 @@ repositories {
 }
 
 dependencies {
-	compile 'org.codehaus.groovy:groovy-all:2.0.6'
-	testCompile "junit:junit:4.10"
+	implementation 'org.codehaus.groovy:groovy-all:2.0.6'
+	testImplementation "junit:junit:4.10"
 }
 
 cobertura {
